// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LightOverview when light is disabled renders correctly 1`] = `
<div
  className="MuiGrid-root lightRow MuiGrid-container MuiGrid-align-items-xs-center"
  style={
    Object {
      "background": "linear-gradient(45deg, #1a1a1a 35%, rgb(242,242,242) 90%)",
      "cursor": "no-drop",
      "opacity": 0.2,
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled MuiButton-fullWidth Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onDragEnd={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "color": "#ffffff",
        }
      }
      tabIndex={-1}
      to="/light/2"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        />
      </span>
    </button>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
  >
    <button
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnd={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <span
          aria-hidden={true}
          className="material-icons MuiIcon-root md-28"
        >
          power_off
        </span>
      </span>
    </button>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="LightBrightnessSlider-root-1"
    >
      <div
        className="MuiSlider-root Mui-disabled LightBrightnessSlider-slider-2"
        onClick={[Function]}
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStartCapture={[Function]}
      >
        <div
          className="MuiSlider-container"
        >
          <div
            className="MuiSlider-track LightBrightnessSlider-track-3 MuiSlider-trackBefore Mui-disabled"
            style={
              Object {
                "width": "calc(0% - 6px)",
              }
            }
          />
          <div
            className="MuiSlider-thumbWrapper Mui-disabled"
            style={
              Object {
                "transform": "translateX(0%)",
              }
            }
          >
            <button
              aria-orientation="horizontal"
              aria-valuemax={100}
              aria-valuemin={1}
              aria-valuenow={0}
              className="MuiButtonBase-root MuiSlider-thumb LightBrightnessSlider-thumb-4 Mui-disabled Mui-disabled"
              disabled={true}
              onBlur={[Function]}
              onDragEnd={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              onTouchStartCapture={[Function]}
              role="slider"
              tabIndex={-1}
              type="button"
            />
          </div>
          <div
            className="MuiSlider-track LightBrightnessSlider-track-3 MuiSlider-trackAfter Mui-disabled"
            style={
              Object {
                "width": "calc(100% - 6px)",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LightOverview when light is disconnected renders correctly 1`] = `
<div
  className="MuiGrid-root lightRow MuiGrid-container MuiGrid-align-items-xs-center"
  style={
    Object {
      "background": "linear-gradient(45deg, #1a1a1a 35%, rgb(242,242,242) 90%)",
      "cursor": "no-drop",
      "opacity": 0.2,
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled MuiButton-fullWidth Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onDragEnd={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "color": "#ffffff",
        }
      }
      tabIndex={-1}
      to="/light/3"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        />
      </span>
    </button>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
  >
    <button
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnd={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <span
          aria-hidden={true}
          className="material-icons MuiIcon-root md-28"
        >
          power_off
        </span>
      </span>
    </button>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="LightBrightnessSlider-root-1"
    >
      <div
        className="MuiSlider-root Mui-disabled LightBrightnessSlider-slider-2"
        onClick={[Function]}
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStartCapture={[Function]}
      >
        <div
          className="MuiSlider-container"
        >
          <div
            className="MuiSlider-track LightBrightnessSlider-track-3 MuiSlider-trackBefore Mui-disabled"
            style={
              Object {
                "width": "calc(0% - 6px)",
              }
            }
          />
          <div
            className="MuiSlider-thumbWrapper Mui-disabled"
            style={
              Object {
                "transform": "translateX(0%)",
              }
            }
          >
            <button
              aria-orientation="horizontal"
              aria-valuemax={100}
              aria-valuemin={1}
              aria-valuenow={0}
              className="MuiButtonBase-root MuiSlider-thumb LightBrightnessSlider-thumb-4 Mui-disabled Mui-disabled"
              disabled={true}
              onBlur={[Function]}
              onDragEnd={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              onTouchStartCapture={[Function]}
              role="slider"
              tabIndex={-1}
              type="button"
            />
          </div>
          <div
            className="MuiSlider-track LightBrightnessSlider-track-3 MuiSlider-trackAfter Mui-disabled"
            style={
              Object {
                "width": "calc(100% - 6px)",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LightOverview when light is enabled renders correctly 1`] = `
<div
  className="MuiGrid-root lightRow MuiGrid-container MuiGrid-align-items-xs-center"
  style={
    Object {
      "background": "linear-gradient(45deg, #1a1a1a 35%, rgb(242,242,242) 90%)",
      "cursor": "no-drop",
      "opacity": 0.2,
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled MuiButton-fullWidth Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onDragEnd={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "color": "#ffffff",
        }
      }
      tabIndex={-1}
      to="/light/1"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        />
      </span>
    </button>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
  >
    <button
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnd={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <span
          aria-hidden={true}
          className="material-icons MuiIcon-root md-28"
        >
          power_off
        </span>
      </span>
    </button>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="LightBrightnessSlider-root-1"
    >
      <div
        className="MuiSlider-root Mui-disabled LightBrightnessSlider-slider-2"
        onClick={[Function]}
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStartCapture={[Function]}
      >
        <div
          className="MuiSlider-container"
        >
          <div
            className="MuiSlider-track LightBrightnessSlider-track-3 MuiSlider-trackBefore Mui-disabled"
            style={
              Object {
                "width": "calc(0% - 6px)",
              }
            }
          />
          <div
            className="MuiSlider-thumbWrapper Mui-disabled"
            style={
              Object {
                "transform": "translateX(0%)",
              }
            }
          >
            <button
              aria-orientation="horizontal"
              aria-valuemax={100}
              aria-valuemin={1}
              aria-valuenow={0}
              className="MuiButtonBase-root MuiSlider-thumb LightBrightnessSlider-thumb-4 Mui-disabled Mui-disabled"
              disabled={true}
              onBlur={[Function]}
              onDragEnd={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              onTouchStartCapture={[Function]}
              role="slider"
              tabIndex={-1}
              type="button"
            />
          </div>
          <div
            className="MuiSlider-track LightBrightnessSlider-track-3 MuiSlider-trackAfter Mui-disabled"
            style={
              Object {
                "width": "calc(100% - 6px)",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
